Resolves: tdf#124804 border considered changed when it isn't

Change-Id: Ib4b6031b31500a8a2086721124b5b8f554f7c1c5
Reviewed-on: https://gerrit.libreoffice.org/71307
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>